fix wrap mobile

--- a/src/assets/scss/layout/_navbar.scss
+++ b/src/assets/scss/layout/_navbar.scss
@@ -24,7 +24,7 @@
 }
 
 
-.navbar-left {
+.navbar-left, .navbar-right {
   display: flex;
   align-items: center;
 }
